# Agent-core

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent/: __init__.py  agent.py  config.py  errors.py  messages.py  middleware.py  response.py  router.py  schemas.py  session.py  stream.py  tools.py
agent/cli/: __init__.py  main.py
agent/execution/: __init__.py  retries.py  runtime.py  structured_output.py  tool_loop.py
agent/providers/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  openai.py  registry.py
agent/stores/: __init__.py  base.py  memory.py  sqlite.py
agent/testing/: __init__.py  fake_provider.py  fixtures.py
agent/types/: __init__.py  config.py  messages.py  response.py  router.py  stream.py  tools.py
docs/: README.md  api-reference.md  conf.py  configuration.md  custom-providers.md  error-handling.md  index.rst  installation.md  middleware.md  providers.md  quickstart.md  routing.md  sessions.md  streaming.md  structured-outputs.md  tools.md  types.md
docs/api/: agent.rst  errors.rst  middleware.rst  providers.rst  router.rst  session.rst  streaming.rst  tools.rst  types.rst
examples/: basic_usage.py  router_fallback.py  sessions.py  structured_output.py  tool_usage.py
specs/: README.md  api-reference.md  architecture.md  execution-runtime.md  getting-started.md  provider-contract.md  providers.md  routing.md  sessions.md  structured-output.md  tools.md  types.md
tests/: test_agent.py  test_cli.py  test_errors.py  test_execution.py  test_middleware.py  test_providers.py  test_router.py  test_schemas.py  test_session.py  test_stores.py  test_stream.py  test_tools.py  test_types.py
